--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
 #Created by VisualGDB. Right-click on the component in Solution Explorer to edit properties using convenient GUI.
 
 idf_component_register(	SRCS "esp_base.cpp"
-						INCLUDE_DIRS "." "misc")
+						INCLUDE_DIRS "." "misc" "rtos")
