--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 #Created by VisualGDB. Right-click on the component in Solution Explorer to edit properties using convenient GUI.
 
 idf_component_register(
-						SRCS "esp_base.cpp" "settings/settings.cpp"
-						INCLUDE_DIRS "." "misc" "rtos" "settings" "interfaces"
+						SRCS "esp_base.cpp"
+						INCLUDE_DIRS "." "callback" "helpers" "time" 
 						REQUIRES json nvs_flash)
