--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,11 @@
 #Created by VisualGDB. Right-click on the component in Solution Explorer to edit properties using convenient GUI.
 
 idf_component_register(
-						SRCS "esp_base.cpp"
-						INCLUDE_DIRS "." "callback" "helpers" "mtime" 
+	SRCS
+		esp_base.cpp
+	INCLUDE_DIRS
+		.
+		callback
+		helpers
+		mtime
 						REQUIRES json nvs_flash)
