Socket stuff moved to this lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,11 @@
 idf_component_register(
 	SRCS
 		esp_base.cpp
+		ethernet/socket.cpp
 	INCLUDE_DIRS
 		.
 		callbacks
+		ethernet
 		helpers
 		interfaces
 		mtime
